packages/typ/tests/fixtures/diagnostics/0096_core_bin_payload_mismatch_08.ml.expected
File "0096_core_bin_payload_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0096_core_bin_payload_mismatch_08 is not a valid module name.

File "0096_core_bin_payload_mismatch_08.ml", line 2, characters 22-26:
2 | let _ : int bin = Bin true
                          ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
