packages/typ/tests/fixtures/diagnostics/0096_core_bin_payload_mismatch_08.ml
type 'a bin = Bin of 'a
let _ : int bin = Bin true
